--- a/projects/ixocreate/ngx-admin/src/lib/views/resource/edit/resource-edit.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/resource/edit/resource-edit.component.html
@@ -4,9 +4,9 @@
       <a [routerLink]="'../../'" class="btn btn-outline-dark">
         <i class="fa fa-ban"></i> Cancel
       </a>
-      <button *ngIf="resourceInfo && resourceInfo.canEdit" class="btn btn-primary" (click)="onSubmit()">
-        <i class="fa fa-save"></i> Update
-      </button>
+      <ixo-button *ngIf="resourceInfo && resourceInfo.canEdit" [loading]="loading" icon="save" (click)="onSubmit()">
+        Update
+      </ixo-button>
       <button *ngIf="resourceInfo && resourceInfo.canDelete" class="btn btn-danger" (click)="doDelete()">
         <i class="fa fa-trash"></i>
       </button>
