--- a/projects/ixocreate/ngx-admin/src/lib/views/translation/edit/translation-edit.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/translation/edit/translation-edit.component.html
@@ -14,9 +14,7 @@
         <textarea rows="4" class="form-control" [(ngModel)]="locale.message"></textarea>
       </div>
       <div class="card-footer text-right">
-        <button type="button" class="btn btn-primary" (click)="saveTranslation(locale)">
-          <i class="fa fa-save"></i> Update
-        </button>
+        <ixo-button [loading]="loading" icon="save" (click)="saveTranslation(locale)">Update</ixo-button>
       </div>
     </div>
   </ng-container>
