--- a/projects/ixocreate/ngx-admin/src/lib/views/user/edit/user-edit.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/user/edit/user-edit.component.html
@@ -3,9 +3,7 @@
     <a [routerLink]="'../../'" class="btn btn-outline-dark">
       <i class="fa fa-ban"></i> Cancel
     </a>
-    <button class="btn btn-primary" (click)="onSubmit()">
-      <i class="fa fa-save"></i> Update
-    </button>
+    <ixo-button [loading]="loading" icon="save" (click)="onSubmit()">Update</ixo-button>
     <button class="btn btn-danger" (click)="doDelete()">
       <i class="fa fa-trash"></i>
     </button>
