--- a/projects/ixocreate/ngx-admin/src/lib/components/ixo-sitemap-item/ixo-sitemap-item.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/components/ixo-sitemap-item/ixo-sitemap-item.component.html
@@ -46,7 +46,7 @@
             <i class="fa fa-fw fa-sort"></i> Move Page
           </button>
           <button class="dropdown-item" type="button" (click)="movePageStart('copy')"
-                  *ngIf="false && !page.pageType.handle">
+                  *ngIf="!page.pageType.handle">
             <i class="fa fa-fw fa-clone"></i> Copy Page
           </button>
           <a class="dropdown-item dropdown-item-info" *ngIf="pageUrl && isOnline" [href]="pageUrl" target="_blank">
