--- a/projects/ixocreate/ngx-admin/src/lib/views/page/edit/page-edit.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/page/edit/page-edit.component.html
@@ -162,43 +162,56 @@
           </div>
         </div>
       </tab>
-      <!--
       <tab>
         <ng-template tabHeading>
           <i class="fa fa-wrench"></i>
         </ng-template>
         <div class="p-3">
+          <h6><i class="fa fa-fw fa-clone"></i> Other Languages</h6>
+          <ng-container *ngIf="pageLocales.length > 0">
+            <div class="row mb-3 mt-1">
+              <div class="col" *ngFor="let language of pageLocales">
+                <button type="button"
+                        [class.disabled]="!language.page"
+                        class="btn btn-outline-primary"
+                        (click)="goToOtherLanguage(language)" ixoClickStopPropagation>
+                  <i class="flag-icon flag-icon-{{ language.locale.substr(3) | lowercase }}"></i>
+                </button>
+              </div>
+            </div>
+          </ng-container>
 
-          <ng-container *ngIf="detailData$ | async as detailData">
-            <ng-container *ngIf="detailData.meta.otherLanguages.length > 0">
-              <h6><i class="fa fa-fw fa-clone"></i> Replace Content</h6>
-              <ng-container *ngIf="detailData.meta.otherLanguages.length > 0">
-                <div>
-                  <small><b>From other language</b></small>
-                </div>
-                <div class="row mb-3">
-                  <div class="col" *ngFor="let language of detailData.meta.otherLanguages">
-                    <a style="cursor: pointer;" (click)="onReplaceContentModal(language)">
+          <ng-container *ngIf="data$ | async as data">
+            <h6><i class="fa fa-fw fa-clone"></i> Replace Content</h6>
+            <ng-container *ngIf="replacePageLocales.length > 0">
+              <div>
+                <small><b>From other language</b></small>
+              </div>
+              <div class="row mb-3 mt-1" >
+                <ng-container *ngFor="let language of replacePageLocales">
+                  <div class="col">
+                    <button type="button" class="btn btn-outline-primary" (click)="onReplaceContentModal(language)" ixoClickStopPropagation>
                       <i class="flag-icon flag-icon-{{ language.locale.substr(3) | lowercase }}"></i>
-                    </a>
+                    </button>
                   </div>
-                </div>
-              </ng-container>
-              <ng-container *ngIf="detailData.meta.samePageTypePages.length > 0">
-                <div>
-                  <small><b>From other page</b></small>
-                </div>
-                <ng-select [items]="detailData.meta.samePageTypePages" (change)="onReplaceContentModal($event)"
-                           bindLabel="name" bindValue="id" [clearable]="false">
-                </ng-select>
-              </ng-container>
-              <hr>
+                </ng-container>
+              </div>
             </ng-container>
+            <!--
+            <ng-container *ngIf="detailData.meta.samePageTypePages.length > 0">
+              <div>
+                <small><b>From other page</b></small>
+              </div>
+              <ng-select [items]="detailData.meta.samePageTypePages" (change)="onReplaceContentModal($event)"
+                         bindLabel="name" bindValue="id" [clearable]="false">
+              </ng-select>
+            </ng-container>
+            <hr>
+            -->
           </ng-container>
 
         </div>
       </tab>
-      -->
       <tab>
         <ng-template tabHeading>
           <i class="fa fa-list"></i>
