allow empty pageversion, datepicker bug fix

--- a/projects/ixocreate/ngx-admin/src/lib/components/ixo-date-picker/ixo-date-picker.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/components/ixo-date-picker/ixo-date-picker.component.html
@@ -5,7 +5,7 @@
          (change)="onChange($event)"
          [placeholder]="placeholder"
          [class.is-invalid]="showError">
-  <div class="calender-overlay" [hidden]="!showOverlay">
+  <div class="calender-overlay" [hidden]="!showOverlay" ixoClickStopPropagation>
     <p-calendar class="date-picker"
                 [inline]="true"
                 [placeholder]="placeholder"
