--- a/projects/ixocreate/ngx-admin/src/lib/dashboard/ixo-slideshow/ixo-slideshow.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/dashboard/ixo-slideshow/ixo-slideshow.component.html
@@ -1,4 +1,4 @@
-<div class="card" *ngIf="data">
+<div class="card dashboard-carousel" *ngIf="data">
   <div class="card-body p-0">
     <carousel>
       <slide *ngFor="let item of data">
