--- a/projects/ixocreate/ngx-admin/src/lib/dashboard/ixo-counter/ixo-counter.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/dashboard/ixo-counter/ixo-counter.component.html
@@ -1,6 +1,8 @@
 <div class="card" *ngIf="data">
   <div class="card-body p-3 d-flex align-items-center">
-    <i class="p-3 font-2xl mr-3 {{ data.icon }} text-light" [ngStyle]="{'background-color': data.color}"></i>
+    <div class="counter-widget-icon" [ngStyle]="{ 'background-color': data.color }">
+      <div class="{{ data.icon }} fa-fw"></div>
+    </div>
     <div>
       <div class="text-value-sm" [ngStyle]="{'color': data.color}">{{ data.counter }}</div>
       <div class="text-muted text-uppercase font-weight-bold small">{{ data.title }}</div>
