--- a/projects/ixocreate/ngx-admin/src/lib/dashboard/ixo-gallery/ixo-gallery.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/dashboard/ixo-gallery/ixo-gallery.component.html
@@ -1,12 +1,13 @@
-<div class="row no-gutters media-grid" *ngIf="data">
-  <div *ngFor="let item of data" class="col-xl-2 col-sm-4 col-6">
-    <a [href]="item.image.original" target="_blank">
-      <div class="media-container">
-        <div class="media-image" [ngStyle]="{backgroundImage: 'url(' + item.image.thumb + ')'}"></div>
-        <div class="media-image-title">
-          <div>{{ item.title }} <i *ngIf="item.icon" [class]="item.icon"></i></div>
-        </div>
+<div class="card" *ngIf="data">
+  <div class="card-body p-0">
+    <div class="row no-gutters media-grid">
+      <div *ngFor="let item of data" class="col-xl-2 col-sm-4 col-6">
+        <a [href]="item.image.original" target="_blank" class="media-container">
+          <div class="media-image" [ngStyle]="{backgroundImage: 'url(' + item.image.thumb + ')'}"></div>
+          <div class="media-image-title"><div>{{ item.title }}</div></div>
+          <div class="media-image-icon" *ngIf="item.icon"><i [class]="item.icon"></i></div>
+        </a>
       </div>
-    </a>
+    </div>
   </div>
 </div>
