--- a/projects/ixocreate/ngx-admin/src/lib/views/page/edit/page-edit.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/page/edit/page-edit.component.html
@@ -91,7 +91,7 @@
             </div>
             <div class="form-group ixo-toggle-right">
               <label class="ixo-form-label">
-                Online<b class="text-danger">*</b>
+                Online
               </label>
 
               <div class="ixo-form-control-container">
@@ -109,7 +109,7 @@
 
             <div class="form-group">
               <label class="ixo-form-label">
-                Published From<b class="text-danger">*</b>
+                Published From
               </label>
               <div class="ixo-form-control-container">
                 <div class="input-group">
@@ -125,7 +125,7 @@
 
             <div class="form-group">
               <label class="ixo-form-label">
-                Published Until<b class="text-danger">*</b>
+                Published Until
               </label>
               <div class="ixo-form-control-container">
                 <div class="input-group">
