update media file size output

--- a/projects/ixocreate/ngx-admin/src/lib/views/media/edit/media-edit.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/media/edit/media-edit.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="row mb-1">
           <div class="col-sm-3 font-weight-bold">Size</div>
-          <div class="col-sm">{{ data.media.size | ixoFileSize }}</div>
+          <div class="col-sm">{{ data.media.fileSize | ixoFileSize }}</div>
         </div>
         <div class="row mb-1">
           <div class="col-sm-3 font-weight-bold">Uploaded At</div>
