--- a/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-media/formly-field-media.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-media/formly-field-media.component.html
@@ -1,21 +1,21 @@
-<div class="input-group" (click)="openModal(modalTemplate2)" [class.cursor-pointer]="!to.disabled">
+<div class="input-group" (click)="openModal(modalTemplate)" [class.cursor-pointer]="!to.disabled">
   <div class="input-group-prepend">
-        <span class="input-group-text p-0" [class.is-invalid]="showError">
-          <div class="input-media-preview" *ngIf="!value"><i class="fa fa-fw fa-file-o"></i></div>
-          <ng-container *ngIf="value">
-            <ng-container *ngIf="isImage(value.mimeType); else noImage">
-              <span class="transparent-img-bg">
-                <a [href]="value.original" target="_blank" class="input-media-preview"
-                   [style.backgroundImage]="'url(' + value.thumb + ')'" ixoClickStopPropagation></a>
-              </span>
-            </ng-container>
-            <ng-template #noImage class="media-container">
-              <a [href]="value.original" target="_blank" class="input-media-preview" ixoClickStopPropagation>
-                <i [class]="'fa fa-fw ' + mimeTypeIcon(value.mimeType)"></i>
-              </a>
-            </ng-template>
-          </ng-container>
-        </span>
+    <span class="input-group-text p-0" [class.is-invalid]="showError">
+      <div class="input-media-preview" *ngIf="!value"><i class="fa fa-fw fa-file-o"></i></div>
+      <ng-container *ngIf="value">
+        <ng-container *ngIf="isImage(value.mimeType); else noImage">
+          <span class="transparent-img-bg">
+            <a [href]="value.original" target="_blank" class="input-media-preview"
+               [style.backgroundImage]="'url(' + value.thumb + ')'" ixoClickStopPropagation></a>
+          </span>
+        </ng-container>
+        <ng-template #noImage class="media-container">
+          <a [href]="value.original" target="_blank" class="input-media-preview" ixoClickStopPropagation>
+            <i [class]="'fa fa-fw ' + mimeTypeIcon(value.mimeType)"></i>
+          </a>
+        </ng-template>
+      </ng-container>
+    </span>
   </div>
   <input type="text" class="form-control pointer-events-none" [value]="value?.filename" [placeholder]="to.placeholder"
          [class.is-invalid]="showError" [disabled]="to.disabled">
@@ -28,13 +28,6 @@
   </div>
 </div>
 
-<div class="test">
-  <ng-container *ngIf="value && isImage(value.mimeType)">
-    <a [href]="value.original" target="_blank" class="selected-image-preview"
-       [style.backgroundImage]="'url(' + value.original + ')'" ixoClickStopPropagation></a>
-  </ng-container>
-</div>
-
 <ng-template #modalTemplate>
   <div class="current-media is-top" *ngIf="value">
     <div class="row align-items-center">
@@ -45,40 +38,10 @@
         </ng-template>
       </div>
       <div class="col">
-        <b>Current File:</b><br/>
+        <b>Current File:</b><br>
         {{ value.filename }}
       </div>
     </div>
   </div>
   <ixo-media-list (select)="onSelect($event)" [showTypeFilter]="!to.type" [selectedType]="to.type"></ixo-media-list>
-</ng-template>
-
-<ng-template #modalTemplate2>
-  <div class="card annotation-card">
-    <div class="card-body p-0">
-      <div class="annotation-container">
-        <div id="tagged" class="tag">
-          <span id="span-id">0</span>
-        </div>
-        <img [src]="value.original" id="pointer_div" (click)="annotate($event)">
-        You pointed on
-        x = {{posx}}
-        y = {{posy}}
-        <app-formly-field-annotated-image [model]="value"></app-formly-field-annotated-image>
-      </div>
-    </div>
-    <div class="card-footer">
-      <div class="pagination-container">
-        <div class="row align-items-center">
-          <div class="col-sm">
-            Click on the image to append text to it.
-          </div>
-          <div class="col-sm text-right">
-            <ixo-button color="light" icon="ban" (click)="close()">Cancel</ixo-button>
-            <ixo-button color="success" icon="save" (click)="onSelect(value)">Save</ixo-button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </ng-template>
