--- a/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-media-annotated/formly-field-media-annotated.component.scss
+++ b/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-media-annotated/formly-field-media-annotated.component.scss
@@ -11,27 +11,21 @@
     position: absolute;
     z-index: 2;
     background: #3E444E;
-    color: #FFF;
+    color: #FFFFFF;
     border-radius: 50%;
-    width: 22px;
-    height: 22px;
     margin-left: -11px;
     margin-top: -11px;
     cursor: pointer;
+    border: 4px solid #F30;
+    font-size: .8rem;
+    text-align: center;
+    padding: 0 6px;
+    font-weight: bold;
 
     &.selected {
       color: #3E444E;
       background: #FFFFFF;
+      border: 3px solid #3F0;
     }
-  }
-
-  .tag span {
-    position: absolute;
-    width: 20px;
-    font-size: .8rem;
-    text-align: center;
-    margin-left: 1px;
-    margin-top: 1px;
-    pointer-events: none;
   }
 }
