media: save current page state, quill allow bold and italic

--- a/projects/ixocreate/ngx-admin/src/lib/components/ixo-media-list/ixo-media-list.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/components/ixo-media-list/ixo-media-list.component.html
@@ -69,7 +69,7 @@
       </div>
     </ng-template>
   </div>
-  <div class="card-footer">
+  <div class="card-footer" *ngIf="renderPagination">
     <ixo-pagination [itemsPerPage]="itemsPerPage" [totalItems]="totalItems" [currentPage]="currentPage"
                      (pageChanged)="onPage($event)"></ixo-pagination>
   </div>
