--- a/projects/ixocreate/ngx-admin/src/lib/views/media/media.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/media/media.component.html
@@ -1,3 +1,9 @@
 <ixo-content>
-  <ixo-media-list (select)="onSelect($event)"></ixo-media-list>
+  <ixo-media-list
+    [filterValue]="search"
+    [currentPage]="page"
+    [selectedType]="mediaType"
+    (changeFilters)="onChangeFilters($event)"
+    (select)="onSelect($event)"
+  ></ixo-media-list>
 </ixo-content>
