--- a/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-quill/formly-field-quill.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-quill/formly-field-quill.component.html
@@ -1,7 +1,7 @@
 <quill-editor #editor
               [ngModel]="quillDelta"
               format="object"
-              [style]="{height: height}"
+              [style]="{minHeight: height}"
               [readOnly]="to.disabled"
               [modules]="modules"
               [placeholder]="to.placeholder"
