--- a/projects/ixocreate/ngx-admin/src/lib/modals/ixo-link-select-modal/ixo-link-select-modal.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/modals/ixo-link-select-modal/ixo-link-select-modal.component.html
@@ -14,10 +14,19 @@
 <div class="modal-header d-block">
   <div class="row">
     <div class="col-sm-8">
-      <ng-select [items]="linkTypes" bindValue="name" [(ngModel)]="selectedType" [clearable]="false" (change)="onTypeSelect()"></ng-select>
+      <ng-select [items]="linkTypes"
+                 bindValue="type"
+                 [(ngModel)]="selectedType"
+                 [clearable]="false"
+                 (change)="onTypeSelect()">
+      </ng-select>
     </div>
     <div class="col-sm">
-      <ng-select [items]="targetTypes" bindValue="name" [(ngModel)]="selectedTarget" [clearable]="false"></ng-select>
+      <ng-select [items]="targetTypes"
+                 bindValue="name"
+                 [(ngModel)]="selectedTarget"
+                 [clearable]="false">
+      </ng-select>
     </div>
   </div>
 </div>
@@ -27,7 +36,9 @@
     <div class="row align-items-center">
       <div class="col-auto text-center">
         <ng-container *ngIf="isImage(innerValue.value.mimeType); else noImage">
-          <span class="transparent-img-bg border-radius"><img [src]="innerValue.value.thumb" class="img-fluid"/></span>
+          <span class="transparent-img-bg border-radius" *ngIf="innerValue.value.thumb">
+            <img [src]="innerValue.value.thumb" class="img-fluid"/>
+          </span>
         </ng-container>
         <ng-template #noImage class="media-container"><i
           [class]="'fa fa-2x fa-fw ' + mimeTypeIcon(innerValue.value.mimeType)"></i></ng-template>
@@ -41,25 +52,6 @@
   <ixo-media-list class="media-inline" (select)="onSelectType($event)"></ixo-media-list>
 </ng-container>
 
-<ng-container *ngFor="let configLinkType of configLinkTypes">
-  <ng-container *ngIf="selectedType === configLinkType.type && selectItems[selectedType]">
-    <div class="modal-body">
-      <div class="row align-items-center">
-        <div class="col-sm">
-          <ng-select [items]="selectItems[selectedType]" [(ngModel)]="selectedItem[selectedType]" bindLabel="name"
-                     (change)="onConfigTypeSelect(configLinkType)">
-          </ng-select>
-        </div>
-        <div class="col-sm-4 mt-2 mt-sm-0" *ngIf="configLinkType.hasLocales && locales.length > 1">
-          <ng-select [items]="locales" bindLabel="name" bindValue="locale" [(ngModel)]="selectedLocale"
-                     [clearable]="false" (change)="onChangeLocale(configLinkType)"></ng-select>
-        </div>
-      </div>
-    </div>
-  </ng-container>
-</ng-container>
-
-
 <ng-container *ngIf="selectedType === 'external'">
   <div class="modal-body">
     <input type="text" placeholder="Enter URL of external Link (http://...)" class="form-control"
@@ -70,4 +62,26 @@
       class="fa fa-check"></i> Select
     </button>
   </div>
+</ng-container>
+
+<ng-container *ngFor="let linkType of linkTypes">
+  <ng-container *ngIf="selectedType === linkType.type">
+    <div class="modal-body">
+      <div class="row align-items-center">
+        <div class="col-sm">
+          <ng-select [items]="options$ | async"
+                     [(ngModel)]="selectedItem[selectedType]"
+                     bindLabel="name"
+                     [loading]="optionsLoading"
+                     [typeahead]="optionInput$"
+                     (change)="onLinkTypeSelect(linkType)">
+          </ng-select>
+        </div>
+        <div class="col-sm-4 mt-2 mt-sm-0" *ngIf="linkType.hasLocales && locales.length > 1">
+          <ng-select [items]="locales" bindLabel="name" bindValue="locale" [(ngModel)]="selectedLocale"
+                     [clearable]="false" (change)="onChangeLocale(linkType)"></ng-select>
+        </div>
+      </div>
+    </div>
+  </ng-container>
 </ng-container>
