fix media list element (break on select input)

--- a/projects/ixocreate/ngx-admin/src/lib/components/ixo-media-list/ixo-media-list.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/components/ixo-media-list/ixo-media-list.component.html
@@ -28,6 +28,11 @@
     </div>
 
     <ng-container *ngIf="data$ | async as data; else isLoading">
+
+      <div *ngIf="data.items.length === 0" class="mt-4 mb-3 text-center">
+        No Files found.
+      </div>
+
       <div class="row no-gutters media-grid">
         <div *ngFor="let item of uploader.queue" class="col-xl-2 col-sm-4 col-6">
           <div class="media-container">
