--- a/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-media-annotated/formly-field-media-annotated.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-media-annotated/formly-field-media-annotated.component.html
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div>
-  <ixo-media-list (select)="onSelect($event)" [showTypeFilter]="!to.type" [selectedType]="to.type"></ixo-media-list>
+  <ixo-media-list (selectedMedia)="onSelect($event)" [showTypeFilter]="!to.type" [selectedType]="to.type"></ixo-media-list>
 </ng-template>
 
 <ng-template #imageAnnotatorModalTemplate>
