--- a/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-media/formly-field-media.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-media/formly-field-media.component.html
@@ -43,5 +43,5 @@
       </div>
     </div>
   </div>
-  <ixo-media-list (select)="onSelect($event)" [showTypeFilter]="!to.type" [selectedType]="to.type"></ixo-media-list>
+  <ixo-media-list (selectedMedia)="onSelect($event)" [showTypeFilter]="!to.type" [selectedType]="to.type"></ixo-media-list>
 </ng-template>
