--- a/projects/ixocreate/ngx-admin/src/lib/modals/ixo-link-select-modal/ixo-link-select-modal.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/modals/ixo-link-select-modal/ixo-link-select-modal.component.html
@@ -49,7 +49,7 @@
       </div>
     </div>
   </div>
-  <ixo-media-list class="media-inline" (select)="onSelectType($event)"></ixo-media-list>
+  <ixo-media-list class="media-inline" (selectedMedia)="onSelectType($event)"></ixo-media-list>
 </ng-container>
 
 <ng-container *ngIf="selectedType === 'external'">
