--- a/projects/ixocreate/ngx-admin/src/lib/views/media/media.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/views/media/media.component.html
@@ -4,6 +4,6 @@
     [currentPage]="page"
     [selectedType]="mediaType"
     (changeFilters)="onChangeFilters($event)"
-    (select)="onSelect($event)"
+    (selectedMedia)="onSelect($event)"
   ></ixo-media-list>
 </ixo-content>
