--- a/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-table/formly-field-table.component.html
+++ b/projects/ixocreate/ngx-admin/src/lib/forms/types/formly-field-table/formly-field-table.component.html
@@ -1,6 +1,7 @@
-<table class="table table-bordered input-table">
-  <tr *ngFor="let row of tableData; index as i">
-    <td [class.heading]="col.heading" *ngFor="let col of row; index as j">
+<div class="table-responsive">
+  <table class="table table-bordered input-table">
+    <tr *ngFor="let row of tableData; index as i">
+      <td [class.heading]="col.heading" *ngFor="let col of row; index as j">
       <textarea
         ixoAutosize
         [minRows]="1"
@@ -9,29 +10,30 @@
         [(ngModel)]="col.text"
         (ngModelChange)="onChange($event)"
       ></textarea>
-      <div class="table-edit">
-        <button
-          class="table-button"
-          [class.active]="col.heading"
-          (click)="onChangeColHeading(col)"
-        >
-          <i class="fa fa-header"></i>
+        <div class="table-edit">
+          <button
+            class="table-button"
+            [class.active]="col.heading"
+            (click)="onChangeColHeading(col)"
+          >
+            <i class="fa fa-header"></i>
+          </button>
+          <button
+            class="table-button"
+            (click)="openLinkModal(col)"
+          >
+            <i class="fa fa-link"></i>
+          </button>
+        </div>
+      </td>
+      <td class="delete">
+        <button class="btn btn-danger" (click)="removeRow(i)">
+          <i class="fa fa-times"></i>
         </button>
-        <button
-          class="table-button"
-          (click)="openLinkModal(col)"
-        >
-          <i class="fa fa-link"></i>
-        </button>
-      </div>
-    </td>
-    <td style="width: 44px">
-      <button class="btn btn-danger" (click)="removeRow(i)">
-        <i class="fa fa-times"></i>
-      </button>
-    </td>
-  </tr>
-</table>
+      </td>
+    </tr>
+  </table>
+</div>
 
 <div
   *ngIf="!tableData.length"
