--- a/projects/ixocreate/ngx-admin/src/scss/custom/_forms.scss
+++ b/projects/ixocreate/ngx-admin/src/scss/custom/_forms.scss
@@ -42,6 +42,8 @@ $form-element-spacer: .5rem;
 
       .ixo-form-control-container {
         flex: 1;
+        min-width: 0;
+        max-width: 100%;
       }
     }
   }
